# Courses

./: README.md  index.html  pyproject.toml  read me
app/: main.py
docs/: api.md  architecture.md
missions/manager/: mgr_m01_inbox_command.json  mgr_m02_meeting_exec.json  mgr_m03_exec_brief.json
prompts/: assist.md  coach.md  evaluate.md  simulate.md
schemas/: mission.schema.json
tests/: test_api.py
